2013-01-11 Paulo Andrade <pcpa@gnu.org>

	* lib/jit_note.c: New file implementing a simple string+integer
	annotation, that should be used to map filename and line number
	to offsets in the generated jit.

	* include/lightning.h, lib/lightning.c: Update for the new
	note code.
	  Add an extra mandatory argument to init_jit, that is used
	as argument to bfd_openr.
	  Change from generic void* to char* the argument to jit_note
	and add an extra integer argument, to map to filename and
	line number.

	* check/ccall.c, check/lightning.c, include/lightning/jit_private.h,
	lib/jit_arm.c, lib/jit_disasm.c, lib/jit_mips.c, lib/jit_ppc.c,
	lib/jit_print.c, lib/jit_x86.c: lib/Makefile.am: Update for the
	new annotation code.

	* configure.ac, check/Makefile.am: Update to work with latest
	automake.

2013-01-09 Paulo Andrade <pcpa@gnu.org>

	* include/lightning.h, lib/jit_arm.c, jit_mips-fpu.c,
	lib/jit_mips.c, lib/jit_print.c, lib/jit_x86.c, lib/lightning.c:
	Remove the jit_code_getarg_{f,d} and jit_code_pusharg{i,r}_{f,d}
	calls, replacing them with the new, internal only, jit_movr_w_f,
	jit_mov{r,i}_f_w, jit_movr_ww_d, and jit_mov{i,r}_d_ww, that
	better describe the operation being done, and allow removing
	the hackish code to detect special conditions for arm when
	moving from/to vfp from/to a grp register pair.
	Rename jit_code_retval_{f,d} to jit_code_x86_retval_{f,d} as
	it is specific to 32 bit x86, and used to move abi return
	value in x87 register to a sse register.

2013-01-05 Paulo Andrade <pcpa@gnu.org>

	* check/cccall.c, check/ccall.ok: New test case to validate
	interleaved calls from/to C code and jit.

	* check/Makefile.am: Update for the new ccall test case.

	* include/lightning.h, lib/lightning.c: Add the new jit_address
	call that returns the real/final address of a "note" in the
	generated jit. It requires a jit_node_t as returned by the
	jit_note call, and is only valid after calling jit_emit.
	  Add an intermediate solution to properly handle arm